@@ -315,6 +315,7 @@ Localization
         #LOC_BDArmory_VesselMover_SpawnVessel = Spawn Vessel
         #LOC_BDArmory_VesselMover_RecoverVessel = Recover Vessel
         #LOC_BDArmory_VesselMover_ChooseCrew = Choose Crew
+        #LOC_BDArmory_VesselMover_PlaceAfterSpawn = Place After Spawn
         #LOC_BDArmory_VesselMover_PlaceVessel = Place Vessel
         #LOC_BDArmory_VesselMover_DropVessel = Drop Vessel
         #LOC_BDArmory_VesselMover_InstantLowering = Instant Lowering
