@@ -1,6 +1,10 @@
 ﻿IMPROVEMENTS / FIXES
 - AI:
 	- Set the main throttle, pitch, yaw and roll axis groups when setting the flight control state. This allows use of axis groups in BDA+ with these axes.
+- VM:
+	- Add option to immediately place the vessel after spawning.
+	- Adjustments to movement in map mode.
+	- Safer placement-lower.
 
 v1.5.9.4
 IMPROVEMENTS / FIXES
